--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.1",
+    "@react-three/fiber": "^8.17.12",
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.18.0",
     "icons": "^1.0.0",
+    "motion": "^11.18.0",
     "raect": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
