--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-tilt": "^1.0.2",
     "styled-components": "^6.1.14",
     "uuid-by-string": "^4.0.0",
